--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "csv-parser": "^3.0.0",
+    "dotenv": "^16.3.2",
     "fs": "^0.0.1-security"
   }
 }
